- Change: Moved the overwrites from the GLOBALS to a static class
- Change: Prettified the display of sourcecode in the backtrace in
  the smoky grey skin.
- Bugfix: Minimise CSS interference from the hosting cms with
  marked text.
- Bugfix: Disabling via sourcecode works again.
- Bugfix: Removed the special backtrace configuration, which
  resulted in a output overkill, crashing the backtrace.

2.3.1
- Bugfix: Fixed shell detection.
- Bugfix: Fixed shell message feedback
- Bugfix: Fixed ajax detection

2.3.0
- Added a configuration for the backtrace, to limit the analysed
  steps.
- Added property comments to the analysis
- Added property declaration place to the analysis.
- Added better unicode support for the HTML output.
- Added better support for debugging onepagers.
- Change: Several performance tweaks for runtime optimization.
- Change: Fallback setting runtime => level set to 5.
- Change: Fallback setting runtime => maxCall set to 10.
- Change: Refactored the half-assed messaging implementation.
- Change: The cookie editor is now much better readable.
- Bugfix: Several tweaks to get a smaller HTML footprint.
- Bugfix: Prevent the debug methods from creating new analysis
  calls, resulting in an infinite loop.
- Bugfix: Better cleanup of HTML fragments left open from
  the hosting CMS.
- Bugfix: Reverted the 'Output -> File' change from 2.2.0
- Bugfix: Prevent a notice in case a property has a default value
  which is NULL.
- Bufix: Fixed a possible endless loop when iterating a traversable
  object.
- Bugfix: Limit the preview of method analysis with a lot of
  parameters or long namespaces.
- Bugfix: Removed a notice, in case krexx was called from normal
  php and then again from a registered shutdown function.
- Bugfix: Removed the multiple escaping of inherited comments.
- Bugfix: Use the filepath filter in the method and function
  analysis.
- Bugfix: Made use of the language file (nearly) everywhere.